layout basics of first row with bootstrap. Draft text. WIP: Add photo container for right third of top row

--- a/index.html
+++ b/index.html
@@ -5,4 +5,24 @@
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   <title>Quin Asselin's Programming Portfolio</title>
 </head>
+<body>
+  <div class="container">
+      <div class="jumbotron">
+        <h1>Welcome to Quin Asselin's Coding Portfolio</h1>
+        <p>Consider perusing some of my projects, current and previous. Also, take a look below to learn a bit more about me.</p>
+      </div>
+
+      <div class="row">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h2 class="card-title"></h2>
+           <p class="card-text"></p>
+          </div>
+        </div>
+        <div class="col-md-4">
+        <!-- Find how to insert container for photo and scale photo with column/screen size. See if overhang from container can be hidden/adjusted to keep center of photo visible. -->
+        </div>
+      </div>
+  </div>
+</body>
 </html>
