--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 !<!DOCTYPE html>
 <html>
 <head>
-  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   <title>Quin Asselin's Programming Portfolio</title>
 </head>
 <body>
@@ -21,6 +21,26 @@
         </div>
         <div class="col-md-4">
         <!-- Find how to insert container for photo and scale photo with column/screen size. See if overhang from container can be hidden/adjusted to keep center of photo visible. -->
+        </div>
+      </div>
+
+      <div class="jumbotron bg-info"> 
+        <h2>Here is a brief list of projects I've previously authored and co-authored with collegues and classmates.</h2>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+        </div> 
+        <div class="col-md-4">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
         </div>
       </div>
   </div>
