--- a/index.html
+++ b/index.html
@@ -6,35 +6,59 @@
   <title>Quin Asselin's Programming Portfolio</title>
 </head>
 <body>
+  <!-- Heading -->
   <div class="container">
       <div class="jumbotron">
         <h1>Welcome to Quin Asselin's Coding Portfolio</h1>
-        <p>Consider perusing some of my projects, current and previous. Also, take a look below to learn a bit more about me.</p>
+        <p><em>Consider perusing some of my projects, current and previous. Also, take a look below to learn a bit more about me.</em></p>
       </div>
 
       <div class="row">
         <div class="col-md-8">
           <div class="card-body">
-            <h2 class="card-title"></h2>
-           <p class="card-text"></p>
+            <h2 class="card-title">Quin Asselin</h2>
+           <p class="card-text">A programmer and student at Epicodus improving my technical skills and seeking future software-development career.</p>
           </div>
         </div>
         <div class="col-md-4">
         <!-- Find how to insert container for photo and scale photo with column/screen size. See if overhang from container can be hidden/adjusted to keep center of photo visible. -->
         </div>
       </div>
-
+      <!-- Projects -->
       <div class="jumbotron bg-info"> 
-        <h2>Here is a brief list of projects I've previously authored and co-authored with collegues and classmates.</h2>
+        <h2>Here is a brief list of projects I've authored and co-authored with collegues and classmates.</h2>
+      </div>
+      <div class="row">
+        <div class="col-md-4 bg-grey">
+        </div>
+        <div class="col-md-4">
+        </div> 
+        <div class="col-md-4 bg-grey">
+        </div>
       </div>
       <div class="row">
         <div class="col-md-4">
         </div>
-        <div class="col-md-4">
-        </div> 
+        <div class="col-md-4 bg-grey">
+        </div>
         <div class="col-md-4">
         </div>
       </div>
+      <!-- About Me -->
+      <div class="row">
+        <div class="col-lg-6">
+        </div>
+        <div class="col-lg-6">
+        </div>
+      </div>
+      <!-- Professional Background -->
+      <div class="row">
+        <div class="col-lg-6">
+        </div>
+        <div class="col-lg-6">
+        </div>
+      </div>
+      <!-- Hobbies, Interests, Supplementary -->
       <div class="row">
         <div class="col-md-4">
         </div>
