--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="col-lg-6">
         </div>
       </div>
-      <!-- Professional Background -->
+      <!-- Professional Background, Education, Why Epicodus-->
       <div class="row">
         <div class="col-lg-6">
         </div>
