Add card for animal shelter with a tag used to link to repo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Heading -->
   <div class="container">
-      <div class="jumbotron">
+      <div class="jumbotron ">
         <h1>Welcome to Quin Asselin's Coding Portfolio</h1>
         <p><em>Consider perusing some of my projects, current and previous. Also, take a look below to learn a bit more about me.</em></p>
       </div>
@@ -25,17 +25,26 @@
         </div>
       </div>
       <!-- Projects -->
-      <div class="jumbotron bg-info"> 
+      <div class="jumbotron bg-grey"> 
         <h2>Here is a brief list of projects I've authored and co-authored with collegues and classmates.</h2>
+        <p>Links to repositories included below.</p>
       </div>
       <div class="row">
         <div class="col-md-4 bg-grey">
+          <!-- Animal Shelter -->
+          <div class="card-body">
+            <h3 class="card-title"> Animal Adoption Site</h3>
+            <p>Website mockup for displaying animals for adoption at local shelter. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
+          </div>
         </div>
         <div class="col-md-4">
+          <!-- Tusk Band -->
         </div> 
         <div class="col-md-4 bg-grey">
+        <!-- Vacay Colab -->
         </div>
       </div>
+      <!-- Might not neeeeeeeeeeeeeeeed this row below! -->
       <div class="row">
         <div class="col-md-4">
         </div>
