include similar basic card for Tusk band website

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </div>
         <div class="col-md-4">
           <!-- Tusk Band -->
+          <div class="card-body">
+            <h3 class="card-title">WIP site for the band Tusk</h3>
+            <p>Mockup for speculative band Tusk. Site displays use of float and aspects of CSS formatting. <a href="https://github.com/Quin-Riley-A/Tusk-Band-Website">Repository</a></p>
+          </div>
         </div> 
         <div class="col-md-4 bg-grey">
         <!-- Vacay Colab -->
