--- a/index.html
+++ b/index.html
@@ -34,18 +34,22 @@
           <!-- Animal Shelter -->
           <div class="card-body">
             <h3 class="card-title"> Animal Adoption Site</h3>
-            <p>Website mockup for displaying animals for adoption at local shelter. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
+            <p>Website mockup for displaying animals for adoption at local shelter. Initial commits made with Jason Markus. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
           </div>
         </div>
         <div class="col-md-4">
           <!-- Tusk Band -->
           <div class="card-body">
-            <h3 class="card-title">WIP site for the band Tusk</h3>
-            <p>Mockup for speculative band Tusk. Site displays use of float and aspects of CSS formatting. <a href="https://github.com/Quin-Riley-A/Tusk-Band-Website">Repository</a></p>
+            <h3 class="card-title">WIP Tusk the Band Website</h3>
+            <p>Mockup for speculative band Tusk. Site displays use of float and aspects of CSS formatting. All commits and current-state co-authored with Karen Choy. <a href="https://github.com/Quin-Riley-A/Tusk-Band-Website">Repository</a></p>
           </div>
         </div> 
         <div class="col-md-4 bg-grey">
         <!-- Vacay Colab -->
+          <div class="card-body">
+            <h3 class="card-title">WIP Vacation Agency Website</h3>
+            <p>A vacation webpage used for practical application of branching and merging commit branches. All commits and current-state co-authored with Niles O'Neil and Greg Ramsower. <a href="https://github.com/Quin-Riley-A/Vacation-Spec-Site">Repository</a></p>
+          </div>
         </div>
       </div>
       <!-- Might not neeeeeeeeeeeeeeeed this row below! -->
