draft first portion of About Me including current work experience

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </div>
       </div>
       <!-- Projects -->
+      <br></br>
+      <h2>Projects Previous and Current</h2>
       <div class="jumbotron bg-grey"> 
-        <h2>Here is a brief list of projects I've authored and co-authored with collegues and classmates.</h2>
+        <h3>A brief list of projects I've authored and co-authored with collegues and classmates.</h3>
         <p>Links to repositories included below.</p>
       </div>
       <div class="row">
@@ -34,21 +36,21 @@
           <!-- Animal Shelter -->
           <div class="card-body">
             <h3 class="card-title"> Animal Adoption Site</h3>
-            <p>Website mockup for displaying animals for adoption at local shelter. Written with HTML and CSS.Initial commits made with Jason Markus. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
+            <p class="card-text">Website mockup for displaying animals for adoption at local shelter. Written with HTML and CSS. Initial commits made with Jason Markus. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
           </div>
         </div>
         <div class="col-md-4">
           <!-- Tusk Band -->
           <div class="card-body">
             <h3 class="card-title">WIP Tusk the Band Website</h3>
-            <p>Mockup for speculative band Tusk. Site displays use of float and aspects of CSS formatting in tandem with initial HTML for page construction. All commits and current-state co-authored with Karen Choy. <a href="https://github.com/Quin-Riley-A/Tusk-Band-Website">Repository</a></p>
+            <p class="card-text">Mockup for speculative band Tusk. Site displays use of float and aspects of CSS formatting in tandem with initial HTML for page construction. All commits and current-state co-authored with Karen Choy. <a href="https://github.com/Quin-Riley-A/Tusk-Band-Website">Repository</a></p>
           </div>
         </div> 
         <div class="col-md-4 bg-grey">
         <!-- Vacay Colab -->
           <div class="card-body">
             <h3 class="card-title">WIP Vacation Agency Website</h3>
-            <p>A vacation webpage used for practical application of branching and merging commit branches. Written with HTML and CSS. All commits and current-state co-authored with Niles O'Neil and Greg Ramsower. <a href="https://github.com/Quin-Riley-A/Vacation-Spec-Site">Repository</a></p>
+            <p class="card-text">A vacation webpage used for practical application of branching and merging commit branches. Written with HTML and CSS. All commits and current-state co-authored with Niles O'Neil and Greg Ramsower. <a href="https://github.com/Quin-Riley-A/Vacation-Spec-Site">Repository</a></p>
           </div>
         </div>
       </div>
@@ -64,15 +66,32 @@
       <!-- About Me -->
       <div class="row">
         <div class="col-lg-6">
+          <div class="card-body">
+            <h3 class="card-title">About Me</h3>
+            <p class="card-text"> Hello, my name is Quin, thank you for your interest in my work so far. As for a little bit about me, I am a 25 year old Epicodus student currently living and working in northern New England. I have a passion for writing and attempting to sus out the nuances of new ideas on my own and collaboratively.</p>
+            <h5>Work Experience</h5>
+            <p><a href="https://www.aurumrecovery.com/">My current job</a> involves refurbishing, repurposing, and reselling used electronics such as:</p>
+            <ul>
+              <li>Consumer Grade Computers and Appliances <em>(eg. laptops, electrolytic components, fridges, ACs)</em></li>
+              <li>and Industrial Recycling <em>(eg. motors, large-scale manufacturing equipment, non-invasive medical instruments)</em></li>
+            </ul>
+          </div>
         </div>
         <div class="col-lg-6">
+          <div class="card-body">
+            <p class="card-text"> 
+            </p>
+          </div>
         </div>
       </div>
       <!-- Professional Background, Education, Why Epicodus-->
       <div class="row">
         <div class="col-lg-6">
+          <!-- Aurum Work -->
+          <!-- College Coursework w/relevant classes -->
         </div>
         <div class="col-lg-6">
+          <!-- Why Epicodus Anecdote-->
         </div>
       </div>
       <!-- Hobbies, Interests, Supplementary -->
