add photo. arrange general about me next to photo and begin to draft and reformat education/work experience in old about me location

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
       <div class="row">
         <div class="col-md-8">
           <div class="card-body">
-            <h2 class="card-title">Quin Asselin</h2>
-           <p class="card-text">A programmer and student at Epicodus improving my technical skills and seeking future software-development career.</p>
+            <h2 class="card-title">About Me</h2>
+           <p class="card-text">
+            Hello, my name is Quin, thank you for your interest in my work so far. As for a little bit about me, I am a 25 year old Epicodus student currently living and working in northern New England. I have a passion for writing and attempting to understand nuances of new ideas both collaboratively and in my own work. Currently a learning programmer and student at Epicodus improving my technical skills and seeking a career in the field of software-development.</p>
           </div>
         </div>
         <div class="col-md-4">
         <!-- Find how to insert container for photo and scale photo with column/screen size. See if overhang from container can be hidden/adjusted to keep center of photo visible. -->
+        <img src="img/Q-A.jpg" class="img-fluid" alt="Quin Asselin against red background">
         </div>
       </div>
       <!-- Projects -->
@@ -67,8 +69,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="card-body">
-            <h3 class="card-title">About Me</h3>
-            <p class="card-text"> Hello, my name is Quin, thank you for your interest in my work so far. As for a little bit about me, I am a 25 year old Epicodus student currently living and working in northern New England. I have a passion for writing and attempting to sus out the nuances of new ideas on my own and collaboratively.</p>
+            <h3 class="card-title">Additional Info</h3>
+            <p class="card-text"> </p>
             <h5>Work Experience</h5>
             <p><a href="https://www.aurumrecovery.com/">My current job</a> involves refurbishing, repurposing, and reselling used electronics such as:</p>
             <ul>
@@ -79,8 +81,14 @@
         </div>
         <div class="col-lg-6">
           <div class="card-body">
-            <p class="card-text"> 
+            <h5>College Coursework</h5>
+            <p class="card-text"> Past coursework includes six semesters worth of course work towards a B.S. in Computer Science at <a href="https://www.hofstra.edu/computer-science/bs-computer-science.html">Hofstra University.</a> Relevant study includes:
             </p>
+            <ul>
+              <li>Discrete Structure of Computer Science I/II</li>
+              <li>Introduction to Automata Theory</li>
+              <li>Algorithms and Data Structures</li>
+            </ul>
           </div>
         </div>
       </div>
