adjust image framing and float right w/Bootstrap img classes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-4">
         <!-- Find how to insert container for photo and scale photo with column/screen size. See if overhang from container can be hidden/adjusted to keep center of photo visible. -->
-          <img src="img/Q-A.jpg" class="img-fluid" alt="Quin Asselin against red background">
+          <img src="img/Q-A.jpg" class="img-fluid rounded-circle float-right" alt="Quin Asselin against red background">
         </div>
       </div>
       <!-- Projects -->
