remove self-organizing notes, add class blue-theme for color/style tiling effect accross cards

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-  <title>Quin Asselin's Programming Portfolio</title>
+  <title>Quin Asselin's Portfolio Landing Page</title>
 </head>
 <body>
   <!-- Heading -->
@@ -22,11 +22,9 @@
           </div>
         </div>
         <div class="col-md-4">
-        <!-- Find how to insert container for photo and scale photo with column/screen size. See if overhang from container can be hidden/adjusted to keep center of photo visible. -->
           <img src="img/Q-A.jpg" class="img-fluid rounded-circle float-right" alt="Quin Asselin against red background">
         </div>
       </div>
-      <!-- Projects -->
       <br></br>
       <h2>Projects Previous and Current</h2>
       <div class="jumbotron bg-grey"> 
@@ -35,32 +33,28 @@
       </div>
       <div class="row">
         <div class="col-md-4 bg-grey">
-          <!-- Animal Shelter -->
           <div class="card-body">
             <h3 class="card-title"> Animal Adoption Site</h3>
             <p class="card-text">Website mockup for displaying animals for adoption at local shelter. Written with HTML and CSS. Initial commits made with Jason Markus. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
           </div>
         </div>
         <div class="col-md-4">
-          <!-- Tusk Band -->
-          <div class="card-body">
+          <div class="card-body blue-theme">
             <h3 class="card-title">WIP Tusk the Band Website</h3>
             <p class="card-text">Mockup for speculative band Tusk. Site displays use of float and aspects of CSS formatting in tandem with initial HTML for page construction. All commits and current-state co-authored with Karen Choy. <a href="https://github.com/Quin-Riley-A/Tusk-Band-Website">Repository</a></p>
           </div>
         </div> 
         <div class="col-md-4 bg-grey">
-        <!-- Vacay Colab -->
           <div class="card-body">
             <h3 class="card-title">WIP Vacation Agency Website</h3>
-            <p class="card-text">A vacation webpage used for practical application of branching and merging commit branches. Written with HTML and CSS. All commits and current-state co-authored with Niles O'Neil and Greg Ramsower. <a href="https://github.com/Quin-Riley-A/Vacation-Spec-Site">Repository</a></p>
+            <p class="card-text">A vacation webpage used for practical application of branching and merging commit branches. Written with HTML and CSS. All commits and current-state co-authored with Niles O'Neil and Greg Ramsower.</span> <a href="https://github.com/Quin-Riley-A/Vacation-Spec-Site">Repository</a></p>
           </div>
         </div>
       </div>
-      <!-- About Me -->
       <h3>Background</h3>
       <div class="row">
         <div class="col-lg-6">
-          <div class="card-body">
+          <div class="card-body blue-theme">
             <h5 class="card-title">Work Experience</h5>
             <p class="card-text"><a href="https://www.aurumrecovery.com/">My current job</a> involves refurbishing, repurposing, and reselling used electronics such as:</p>
             <ul>
@@ -70,7 +64,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="card-body">
+          <div class="card-body blue-theme">
             <h5 class="card-title">College Coursework</h5>
             <p class="card-text"> Past coursework includes six semesters worth of course work towards a B.S. in Computer Science at <a href="https://www.hofstra.edu/computer-science/bs-computer-science.html">Hofstra University.</a> Relevant study includes:
             </p>
@@ -82,11 +76,9 @@
           </div>
         </div>
       </div>
-      <!-- Professional Background, Education, Why Epicodus-->
+      <h3>Additional Information</h3>
       <div class="row">
         <div class="col-lg-6">
-          <!-- Aurum Work -->
-          <!-- College Coursework w/relevant classes -->
         </div>
         <div class="col-lg-6">
           <!-- Why Epicodus Anecdote-->
