add strong elements to about me section. Add spans for underlines to Hobbies and Interests

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           <div class="card-body">
             <h2 class="card-title">About Me</h2>
             <p class="card-text">
-            Hello, my name is Quin, thank you for your interest in my work so far. As for a little bit about me, I am a 25 year old Epicodus student currently living and working in northern New England. I have a passion for writing and attempting to understand nuances of new ideas both collaboratively and in my own work. Currently a learning programmer and student at Epicodus improving my technical skills and seeking a career in the field of software-development.</p>
+            Hello, my name is Quin, thank you for your interest in my work so far. To start off with a little bit about me, I am a 25 year old Epicodus student currently living and working in northern New England. I have a passion for writing and attempting to understand the <span class=italic>nuances</span> of new ideas both collaboratively and in my own work.</p> 
+            <p>I really enjoy reading and discussion as a way to absorb the meaning of people's varied ideas and trying to incorporate a comprehension of the things I've learned into how I interlocute and further my understanding of other people.</p>
+            <p>I am currently a learning programmer and student at Epicodus. The course has so far proved to be an excellent method for improving my technical skills that I had not previously encountered. In the <strong>near future,</strong> I am seeking a career in the field of <strong>software-development.</strong></p>
           </div>
         </div>
         <div class="col-md-4">
@@ -79,9 +81,26 @@
       <h3>Additional Information</h3>
       <div class="row">
         <div class="col-lg-6">
+          <div class="card-body">
+            <h5 class="card-title">Why Epicodus</h5>
+            <p class="card-text">
+            </p>
+          </div>
         </div>
         <div class="col-lg-6">
-          <!-- Why Epicodus Anecdote-->
+          <div class="card-body">
+            <h5 class="card-title">Hobbies,Interests</h5>
+            <p class="card-text">Outside of my time devoted to the work of computer hardware and further learning in the field of computer science, I find time to hike and enjoy the great outdoors.</p>
+            <p class="card-text">I also enjoy reading books! My favorite genres are speculative-fiction/fantansy and historical essays/politcal analysis. Here are some works I've recently read that I really enjoyed:
+            </p>
+            <ol>
+              <li><span class="underline">The Tensorate Series</span> by Neon Yang</li>
+              <li><span class="underline">The Left Hand of Darkness</span> by Ursula K. Le Guin</li>
+              <li><span class="underline">The Black Jacobins</span> by C.L.R. James</li>
+              <li><span class="underline">The Anarchism of Nestor Makhno <strong>(1918-1921)</strong></span> by Michael Palij</li>
+              <li><span class="underline">The Drinker</span> by Hans Fallada</li>
+            </ol>
+          </div>
         </div>
       </div>
       <!-- Hobbies, Interests, Supplementary -->
