--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>Projects Previous and Current</h2>
       <div class="jumbotron bg-grey"> 
         <h3>A brief list of projects I've authored and co-authored with collegues and classmates.</h3>
-        <p>Links to repositories included below.</p>
+        <p class="italic">Links to repositories included below.</p>
       </div>
       <div class="row">
         <div class="col-md-4 bg-grey">
@@ -84,6 +84,8 @@
           <div class="card-body">
             <h5 class="card-title">Why Epicodus</h5>
             <p class="card-text">
+              Initially, I heard of Epicodus via a friend of my <span class="cute">partner</span> living in Oregon. They had an excellent experience over the span of the course in which their knowledge and comfort with coding had improved a great deal. While I was interested in the prospects of the class from the beginning, I was enthused to learn the course offered the potential for a scholarship to underrepresented groups within the industry.</p>
+              <p>As a transgender woman with an education background in Computer Science and an interest in coding, the chance to undertake this class seemed too good an opportunity to pass-by. After discussion with the advisory staff of Epicodus, I was encouraged to apply for the scholarship program. To my amazement, was accepted for the course! I look forward to what this course has to offer in the future, and what I can contribute.
             </p>
           </div>
         </div>
