establish custom box model class used in tandem with bootstraps jumbotron. Adjusts colors, margin, borders, and padding while keeping general jumbotron look.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Heading -->
   <div class="container">
-    <div class="jumbotron ">
+    <div class="jumbotron jumbotron-custom">
       <h1>Welcome to Quin Asselin's Coding Portfolio</h1>
       <p><em>Consider perusing some of my projects, current and previous. Also, take a look below to learn a bit more about me.</em></p>
     </div>
@@ -29,8 +29,8 @@
     </div>
     <br></br>
     <h2>Projects Previous and Current</h2>
-    <div class="jumbotron bg-grey"> 
-      <h3>A brief list of projects I've authored and co-authored with collegues and classmates.</h3>
+    <div class="jumbotron jumbotron-custom"> 
+      <h4>A brief list of projects I've authored and co-authored with collegues and classmates.</h4>
       <p class="italic">Links to repositories included below.</p>
     </div>
     <div class="row">
