add image and card-body borders. Float all card-body left for readablity on smaller screens.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
           <h5 class="card-title">Why Epicodus</h5>
           <p class="card-text">
             Initially, I heard of Epicodus via a friend of my <span class="cute">partner</span> living in Oregon. They had an excellent experience over the span of the course in which their knowledge and comfort with coding had improved a great deal. While I was interested in the prospects of the class from the beginning, I was enthused to learn the course offered the potential for a scholarship to underrepresented groups within the industry.</p>
-            <p>As a transgender woman with an education background in Computer Science and an interest in coding, the chance to undertake this class seemed too good an opportunity to pass-by. After discussion with the advisory staff of Epicodus, I was encouraged to apply for the scholarship program. To my amazement, was accepted for the course! I look forward to what this course has to offer in the future, and what I can contribute.
-          </p>
+            <p class="card-text">As a transgender woman with an education background in Computer Science and an interest in coding, the chance to undertake this class seemed too good an opportunity to pass-by. After discussion with the advisory staff of Epicodus, I was encouraged to apply for the scholarship program. To my amazement, was accepted for the course! I look forward to what this course has to offer in the future, and what I can contribute.</p>
         </div>
       </div>
       <div class="col-lg-6">
