--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="col-md-4 bg-grey">
         <div class="card-body">
           <h3 class="card-title"> Animal Adoption Site</h3>
-          <p class="card-text">Website mockup for displaying animals for adoption at local shelter. Written with HTML and CSS. Initial commits made with Jason Markus. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
+          <p class="card-text">Website mockup displaying animals for adoption at local shelter. Written with HTML and CSS. Initial commits made with Jason Markus. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
         </div>
       </div>
       <div class="col-md-4">
@@ -92,7 +92,7 @@
       </div>
       <div class="col-lg-6">
         <div class="card-body blue-theme">
-          <h5 class="card-title">Hobbies,Interests</h5>
+          <h5 class="card-title">Hobbies, Interests</h5>
           <p class="card-text">Outside of my time devoted to the work of computer hardware and further learning in the field of computer science, I find time to hike and enjoy the great outdoors.</p>
           <p class="card-text">I also enjoy reading books! My favorite genres are speculative-fiction/fantansy and historical essays/politcal analysis. Here are some works I've recently read that I really enjoyed:
           </p>
