correct minor syntax errors and fix spacing for readability

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   <title>Quin Asselin's Portfolio Landing Page</title>
 </head>
 <body>
-  <!-- Heading -->
   <div class="container">
     <div class="jumbotron jumbotron-custom">
       <h1>Welcome to Quin Asselin's Coding Portfolio</h1>
@@ -28,13 +27,14 @@
       </div>
     </div>
     <br></br>
+
     <h2>Projects Previous and Current</h2>
     <div class="jumbotron jumbotron-custom"> 
       <h4>A brief list of projects I've authored and co-authored with collegues and classmates.</h4>
       <p class="italic">Links to repositories included below.</p>
     </div>
     <div class="row">
-      <div class="col-md-4 bg-grey">
+      <div class="col-md-4">
         <div class="card-body">
           <h3 class="card-title"> Animal Adoption Site</h3>
           <p class="card-text">Website mockup displaying animals for adoption at local shelter. Written with HTML and CSS. Initial commits made with Jason Markus. <a href="https://github.com/Quin-Riley-A/animal-shelter">Repository</a></p>
@@ -46,7 +46,7 @@
           <p class="card-text">Mockup for speculative band Tusk. Site displays use of float and aspects of CSS formatting in tandem with initial HTML for page construction. All commits and current-state co-authored with Karen Choy. <a href="https://github.com/Quin-Riley-A/Tusk-Band-Website">Repository</a></p>
         </div>
       </div> 
-      <div class="col-md-4 bg-grey">
+      <div class="col-md-4">
         <div class="card-body">
           <h3 class="card-title">WIP Vacation Agency Website</h3>
           <p class="card-text">A vacation webpage used for practical application of branching and merging commit branches. Written with HTML and CSS. All commits and current-state co-authored with Niles O'Neil and Greg Ramsower.</span> <a href="https://github.com/Quin-Riley-A/Vacation-Spec-Site">Repository</a></p>
@@ -54,6 +54,7 @@
       </div>
     </div>
     <br></br>
+
     <h3>Background</h3>
     <div class="row">
       <div class="col-lg-6">
@@ -69,8 +70,7 @@
       <div class="col-lg-6">
         <div class="card-body">
           <h5 class="card-title">College Coursework</h5>
-          <p class="card-text"> Past coursework includes six semesters worth of course work towards a B.S. in Computer Science at <a href="https://www.hofstra.edu/computer-science/bs-computer-science.html">Hofstra University.</a> Relevant study includes:
-          </p>
+          <p class="card-text"> Past coursework includes six semesters worth of course work towards a B.S. in Computer Science at <a href="https://www.hofstra.edu/computer-science/bs-computer-science.html">Hofstra University.</a> Relevant study includes:</p>
           <ul>
             <li>Discrete Structure of Computer Science I/II</li>
             <li>Introduction to Automata Theory</li>
@@ -80,22 +80,21 @@
       </div>
     </div>
     <br></br>
+
     <h3>Additional Information</h3>
     <div class="row">
       <div class="col-lg-6">
         <div class="card-body">
           <h5 class="card-title">Why Epicodus</h5>
-          <p class="card-text">
-            Initially, I heard of Epicodus via a friend of my <span class="cute">partner</span> living in Oregon. They had an excellent experience over the span of the course in which their knowledge and comfort with coding had improved a great deal. While I was interested in the prospects of the class from the beginning, I was enthused to learn the course offered the potential for a scholarship to underrepresented groups within the industry.</p>
-            <p class="card-text">As a transgender woman with an education background in Computer Science and an interest in coding, the chance to undertake this class seemed too good an opportunity to pass-by. After discussion with the advisory staff of Epicodus, I was encouraged to apply for the scholarship program. To my amazement, was accepted for the course! I look forward to what this course has to offer in the future, and what I can contribute.</p>
+          <p class="card-text">Initially, I heard of Epicodus via a friend of my <span class="cute">partner</span> living in Oregon. They had an excellent experience over the span of the course in which their knowledge and comfort with coding had improved a great deal. While I was interested in the prospects of the class from the beginning, I was enthused to learn the course offered the potential for a scholarship to underrepresented groups within the industry.</p>
+          <p class="card-text">As a transgender woman with an education background in Computer Science and an interest in coding, the chance to undertake this class seemed too good an opportunity to pass-by. After discussion with the advisory staff of Epicodus, I was encouraged to apply for the scholarship program. To my amazement, was accepted for the course! I look forward to what this course has to offer in the future, and what I can contribute.</p>
         </div>
       </div>
       <div class="col-lg-6">
         <div class="card-body blue-theme">
           <h5 class="card-title">Hobbies, Interests</h5>
           <p class="card-text">Outside of my time devoted to the work of computer hardware and further learning in the field of computer science, I find time to hike and enjoy the great outdoors.</p>
-          <p class="card-text">I also enjoy reading books! My favorite genres are speculative-fiction/fantansy and historical essays/politcal analysis. Here are some works I've recently read that I really enjoyed:
-          </p>
+          <p class="card-text">I also enjoy reading books! My favorite genres are speculative-fiction/fantansy and historical essays/politcal analysis. Here are some works I've recently read that I really enjoyed:</p>
           <ol>
             <li><span class="underline">The Tensorate Series</span> by Neon Yang</li>
             <li><span class="underline">The Left Hand of Darkness</span> by Ursula K. Le Guin</li>
